# audible-pdf-renamer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES-1.0.1.md  RELEASE_NOTES-1.0.2.md  assistant-guide.txt  audible_pdf_renamer.py  llms.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  title_extraction_issue.md
.github/workflows/: python-tests.yml
tests/: test_cli.py  test_extraction.py  test_rename.py
